--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "MohamedDounnani",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.25.0",
     "express": "^4.17.1",
     "helmet": "^5.0.1",
     "pino": "^7.6.0",
@@ -31,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
     "babel-jest": "^27.4.5",
+    "dotenv": "^14.3.0",
     "eslint": "^8.5.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
@@ -41,7 +43,6 @@
     "pino-pretty": "^7.3.0",
     "ts-node": "^10.4.0",
     "tsd": "^0.19.0",
-    "typescript": "^4.5.4",
-    "dotenv": "^14.3.0"
+    "typescript": "^4.5.4"
   }
 }
